--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "kokomade98",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.4",
     "dotenv": "^7.0.0",
