--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 MONGO_ID=bokvengers
-MONGO_PASSWORD=12341234
-SERVER_IP=13.124.124.67
+MONGO_PASSWORD=980305
+SERVER_IP=127.0.0.1
 PORT=80
+AWS_MONGO_PASSWORD=12341234
