--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
