--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "firebase-admin": "^8.12.1",
     "mongoose": "^5.9.9",
     "morgan": "^1.9.1",
     "pug": "^2.0.3",
