[CREATE] Connect to AWS MongoDB

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 MONGO_ID=bokvengers
 MONGO_PASSWORD=980305
-SERVER_IP=127.0.0.1
+SERVER_IP=13.124.124.67
+LOCAL_IP=127.0.0.1
 PORT=80
 AWS_MONGO_PASSWORD=12341234
